Stephanie Farid's homework

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 	<title></title>
 </head>
 <body>
+	<p> This is just Stephanie doing my homework!Is it working? If so, this is a great video to watch!
+	<a href="https://www.youtube.com/watch?v=USjZcfj8yxE"> Learn Git in 15 Minutes!</a> </p>
+
 
 </body>
 </html>
