--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 	<p> This is just Stephanie doing my homework!Is it working? If so, this is a great video to watch!
 	<a href="https://www.youtube.com/watch?v=USjZcfj8yxE"> Learn Git in 15 Minutes!</a> </p>
 
-
+<p>This is SashaK</p>
 </body>
 </html>
